--- a/Evaluation-on-the.html
+++ b/Evaluation-on-the.html
@@ -1495,6 +1495,9 @@ advanced treatment process didnâ€™t have a remarkable impact on the
 efficiency. Moreover, there were much room for the optimization on
 pollutant removal in terms of the ideal discharge limit converted from
 the projection.</p>
+<p><font size="4.5"><strong>Published</strong> in <em>Energy
+Proceedings</em></font> </br> <font size="4.5"><strong><a href="https://www.energy-proceedings.org/evaluation-on-the-efficiency-of-wastewater-treatment-plants-with-data-envelopment-analysis-from-a-water-energy-nexus-perspective/">PDF
+Download</a></strong></font></p>
 <div align="right">
 <font size="4.5"><strong><a href="index.html">Back to
 Mainpage</a></strong></font>
