--- a/index.html
+++ b/index.html
@@ -418,6 +418,20 @@ module.exports=require("./lib/linkify-html").default;
                     </button>
                   </a>
                 </li>
+                                <li class="list-inline-item">
+                  <a href="https://linkedin.com/in/shike-zhang-2a71b6262/">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Linkedin
+                    </button>
+                  </a>
+                </li>
+                                <li class="list-inline-item">
+                  <a href="https://twitter.com/zhangsk1223">
+                    <button type="button" class="btn btn-outline-dark mb-2">
+                      Twitter
+                    </button>
+                  </a>
+                </li>
                               </ul>
             </div>
           </div>
@@ -433,6 +447,16 @@ module.exports=require("./lib/linkify-html").default;
                                 <a href="https://github.com/Shike1223">
                   <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                     Github
+                  </button>
+                </a>
+                                <a href="https://linkedin.com/in/shike-zhang-2a71b6262/">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Linkedin
+                  </button>
+                </a>
+                                <a href="https://twitter.com/zhangsk1223">
+                  <button type="button" class="list-group-item list-group-item-action my-1 rounded">
+                    Twitter
                   </button>
                 </a>
                               </div>
